feat: update environment configuration and Docker setup; enhance MySQL connection parameters for better performance on VPS; improve font handling for Vietnamese support; refine Nginx configuration for health checks and API routing